--- a/infraestructuradomain/configServer/src/main/resources/application.properties
+++ b/infraestructuradomain/configServer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8888
 spring.application.name=config-server
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
-spring.cloud.config.server.git.uri=${LOCAL_REPOSITORY:file:///C:/Users/Dell/OneDrive/Documentos/Plantillas personalizadas de Office/microservicios_spring-boot_eureka_maven_docker_h2/config-server-repo}
+spring.cloud.config.server.git.uri=${LOCAL_REPOSITORY:file:///C:/Users/Unknown/Documents/Spring/microservicios_spring-boot_eureka_maven_docker_h2/config-server-repo}
 #spring.cloud.config.server.git.uri=${LOCAL_REPOSITORY:https://github.com/OmarJhon9872/microservicios_spring-boot_eureka_maven_docker_h2}
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
